--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ li {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #dd9a05;
+  background-color: #0b5832cc;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   z-index: 999;
 }
@@ -122,7 +122,7 @@ li {
 
 .logo h1 span {
   font-weight: bold;
-  color: #dd9a05;
+  color: #0b5832cc;
 }
 
 .nav-list {
@@ -143,7 +143,7 @@ li {
 
 .nav-link:hover {
   border-radius: 0.3rem;
-  background-color: #dd9a05;
+  background-color: #0b5832cc;
 }
 
 .top-nav {
@@ -175,7 +175,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #dd9a05;
+    background-color: #0b5832cc;
     padding: 1rem 1.6rem;
   }
 
@@ -248,7 +248,7 @@ li {
   font-size: 2rem;
 }
 .hero h4 span {
-  color: #dd9a05;
+  color: #0b5832cc;
   text-decoration: underline;
 }
 
@@ -256,8 +256,8 @@ li {
 .hero a:visited {
   display: inline-block;
   padding: 0.8rem 2.5rem;
-  border: 1px solid #dd9a05;
-  background-color: #dd9a05;
+  border: 1px solid #0b5832cc;
+  background-color: #0b5832cc;
   color: #fff;
   margin-top: 2rem;
 }
@@ -315,7 +315,7 @@ li {
 }
 
 .icons span:hover {
-  color: #dd9a05;
+  color: #0b5832cc;
 }
 
 @media only screen and (max-width: 567px) {
@@ -359,7 +359,7 @@ li {
   left: 50%;
   bottom: -20%;
   transform: translate(-50%, -50%);
-  background-color: #dd9a05;
+  background-color: #0b5832cc;
   width: 50%;
   height: 0.4rem;
   z-index: 1;
@@ -382,16 +382,16 @@ li {
 }
 
 .right h1 span {
-  color: #dd9a05;
+  color: #0b5832cc;
 }
 
 a.btn {
   display: inline-block;
   padding: 1rem 2rem;
-  background: #dd9a05;
+  background: #0b5832cc;
   color: #fff;
   border-radius: 0.5rem;
-  border: 2px solid #dd9a05;
+  border: 2px solid #0b5832cc;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   transition: all 300ms ease-in-out;
 }
@@ -466,7 +466,7 @@ a.btn:active {
 }
 
 .service span {
-  color: #dd9a05;
+  color: #0b5832cc;
   font-size: 4rem;
   transition: all 300ms ease-in-out;
 }
@@ -482,7 +482,7 @@ a.btn:active {
 }
 
 .service:hover {
-  background-color: #dd9a05;
+  background-color: #0b5832cc;
 }
 
 .service:hover span {
@@ -510,7 +510,7 @@ a.btn:active {
 }
 
 .skills-box .skills-bar {
-  background-color: #dd9a05;
+  background-color: #0b5832cc;
   height: 0.4rem;
 }
 
@@ -575,7 +575,7 @@ a.btn:active {
 .team .img-cover {
   overflow: hidden;
   border-radius: 100%;
-  border: 4px solid #dd9a05;
+  border: 4px solid #0b5832cc;
   height: 13rem;
   width: 13rem;
   margin: 0 auto;
@@ -601,7 +601,7 @@ a.btn:active {
 
 .team:hover {
   border-bottom: 4px solid #fff;
-  background-color: #dd9a05;
+  background-color: #0b5832cc;
 }
 
 .team:hover .img-cover {
@@ -637,7 +637,7 @@ a.btn:active {
 .left .icon {
   margin-right: 2rem;
   font-size: 2.3rem;
-  color: #dd9a05;
+  color: #0b5832cc;
 }
 
 .form h2 {
@@ -701,5 +701,5 @@ footer p {
 }
 
 footer p span {
-  color: #dd9a05;
+  color: #0b5832cc;
 }
